--- a/hawc/apps/lit/templates/lit/model_prediction_run.html
+++ b/hawc/apps/lit/templates/lit/model_prediction_run.html
@@ -9,7 +9,7 @@
   <div class="list-group mb-4">
     {% for object in object.model_predictions.all %}
       <div class="list-group-item text-dark d-flex py-2">
-        <i>{{object.reference}}:</i>&nbsp;<span class="badge badge-secondary align-self-center">{{object.prediction_class}}: <b>{{object.score|floatformat:2}}</b></span>
+        <i>{{object.reference}}:</i>&nbsp;<span class="badge badge-secondary align-self-center">{{object.prediction_run.prediction_class}}: <b>{{object.score|floatformat:2}}</b></span>
       </div>
     {% empty %}
       {% alert type="info" %}No predictions found.{% endalert %}
