--- a/hawc/apps/assessment/templates/assessment/trained_model_create.html
+++ b/hawc/apps/assessment/templates/assessment/trained_model_create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <form method="post" enctype="multipart/form-data">
+  <form method="post" enctype="multipart/form-data" class="mt-2">
     {% csrf_token %}
 
     <div class="card mb-3">
