--- a/hawc/apps/assessment/templates/assessment/trained_model_list.html
+++ b/hawc/apps/assessment/templates/assessment/trained_model_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-  <div class="d-flex align-items-start">
+  <div class="d-flex align-items-start mt-2">
     <h2 class="mt-0 mb-2">Trained Models</h2>
     <a class="ml-auto btn btn-primary mt-1" href="{% url 'assessment:trained_model_create' %}">Create a model</a>
   </div>
