--- a/hawc/apps/lit/templates/lit/model_prediction_run.html
+++ b/hawc/apps/lit/templates/lit/model_prediction_run.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h3>{{object.model_version}} ran on <i>{{object.workflow}}</i></h3>
+  <h3 class="mt-2">{{object.model_version}} ran on <i>{{object.workflow}}</i></h3>
 
   <p>{{object.notes}}</p>
 
