--- a/hawc/apps/lit/templates/lit/resolved_duplicates.html
+++ b/hawc/apps/lit/templates/lit/resolved_duplicates.html
@@ -4,9 +4,11 @@
 {% block content %}
   <div class="d-flex">
     <h2>Resolved duplicates</h2>
-    {% actions %}
-      <a class="dropdown-item" href="{% url 'lit:duplicate-resolution' assessment.pk %}">Duplicate resolution</a>
-    {% endactions %}
+    {% if obj_perms.edit %}
+      {% actions %}
+        <a class="dropdown-item" href="{% url 'lit:duplicate-resolution' assessment.pk %}">Duplicate resolution</a>
+      {% endactions %}
+    {% endif %}
   </div>
   <ul class="list-group list-group-flush my-3">
     {% for object in object_list %}
