--- a/hawc/apps/lit/templates/lit/model_prediction_run.html
+++ b/hawc/apps/lit/templates/lit/model_prediction_run.html
@@ -2,15 +2,15 @@
 
 {% block content %}
 
-  <h3 class="mt-2">{{object.model_version}} ran on <i>{{object.workflow}}</i></h3>
+  <h3 class="mt-2 mb-0">{{object.model_version}} ran on <i>{{object.workflow}}</i></h3>
 
-  <p>{{object.notes}}</p>
+  <p class="my-2">{{object.notes}}</p>
 
   <div class="list-group mb-4">
     {% for object in object.model_predictions.all %}
-      <div class="list-group-item text-dark d-flex py-2">
+      <a class="list-group-item list-group-item-action text-dark d-flex py-2" href="{{object.reference.get_absolute_url}}">
         <i>{{object.reference}}:</i>&nbsp;<span class="badge badge-secondary align-self-center">{{object.prediction_run.prediction_class}}: <b>{{object.score|floatformat:2}}</b></span>
-      </div>
+      </a>
     {% empty %}
       {% alert type="info" %}No predictions found.{% endalert %}
     {% endfor %}
