--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     {% for prediction in ref.model_predictions.all %}
-      <span class="badge badge-secondary">{{prediction.prediction_class.name}}: {{prediction.score|floatformat:2}}</span>
+      <span class="badge badge-secondary">{{prediction.prediction_run.prediction_class}}: {{prediction.score|floatformat:2}}</span>
     {% endfor %}
     {% if ref.abstract and not hide_abstract %}
       <p class="abstracts abstract-collapsed  mb-1" title="Click to expand/collapse">{{ref.abstract|safe}}</p>
