--- a/hawc/apps/lit/templates/lit/resolved_duplicates.html
+++ b/hawc/apps/lit/templates/lit/resolved_duplicates.html
@@ -11,28 +11,38 @@
     {% endif %}
   </div>
   {% include 'common/inline_filter_form.html' %}
-  <ul class="list-group list-group-flush my-3">
-    {% for object in object_list %}
-      <li class="list-group-item conflict-reference-li {% if forloop.first %} pb-4 {% else %} py-4 {% endif %}">
-        <div>
-          <span class="badge {% if object.resolution == resolution_state.RESOLVED %}badge-success{% else %}badge-secondary{% endif %}">{{object.get_resolution_display}}</span> {{object.last_updated}} by {{object.resolving_user}}
+  {% for object in object_list %}
+    <div class="card {% if forloop.first %} mb-4 {% else %} my-4 {% endif %}">
+      <div class="card-body">
+        <div class="mb-2">
+          <h3 class="d-inline-block"><span class="badge {% if object.resolution == resolution_state.RESOLVED %}badge-success{% else %}badge-secondary{% endif %}">{{object.get_resolution_display}}</span></h3><span class="text-muted font-italic"> {{object.last_updated}} by {{object.resolving_user}}</span>
         </div>
         {% if object.resolution == resolution_state.RESOLVED %}
-          <div>
+          <div class="mb-2">
             <h3>Primary</h3>
-            {% include 'lit/_reference_with_tags.html' with ref=object.primary %}
+            <div class="border p-1">
+              {% include 'lit/_reference_with_tags.html' with ref=object.primary %}
+            </div>
           </div>
         {% endif %}
         <div>
           <h3>Candidates</h3>
-          <div class="d-flex flex-row">
+          <div class="d-flex flex-row flex-wrap">
             {% for candidate in object.candidates.all %}
-              {% include 'lit/_reference_with_tags.html' with ref=candidate %}
+              <div class="col-sm border p-1">
+                {% include 'lit/_reference_with_tags.html' with ref=candidate %}
+              </div>
             {% endfor %}
           </div>
         </div>
-      </li>
-    {% endfor %}
-  </ul>
+        {% if object.notes %}
+          <div class="mt-2">
+            <h3>Notes</h3>
+            <div class="border p-1">{{object.notes}}</div>
+          </div>
+        {% endif %}
+      </div>
+    </div>
+  {% endfor %}
   {% include "includes/paginator.html" with plural_object_name="duplicate groups" %}
 {% endblock content %}
