--- a/hawc/apps/assessment/templates/assessment/assessment_home.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_home.html
@@ -12,7 +12,7 @@
       {% endif %}
       <span class="dropdown-header">User Defined Fields</span>
       <a class="dropdown-item" href="{% url 'udf:udf_list' %}">View form list</a>
-      {% if user.is_staff %}
+      {% if has_admin %}
         <span class="dropdown-header">Trained Models</span>
         <a class="dropdown-item" href="{% url 'assessment:trained_model_list' %}">View trained models</a>
       {% endif %}
